Checkout & refactor & security
checkout from cart (reduce stock, clear cart)
security fix
refatctor